Fixing library loading to detect duplicate jars and remove them from classpath to avoid errors like "MULTIPLE instances of..."